overflow fixes

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .superContainer{
-  background: url(./assets/images/image3.jpg) no-repeat center center fixed;
+  background: url(./assets/images/image3.jpg) repeat center center fixed;
   background-size:cover;
   height: 100%;
 }
